# cmsgpack

./: .gitignore  LICENSE  NOTICE  README  README.md  USAGE.md  meson.build  pyproject.toml  setup.py
benchmarks/: benchmark.py  encoder.py  individual.py  regular.py  structured.py
cmsgpack/: __init__.py  cmsgpack.c  cmsgpack.pyi  hashtable.h  internals.h  masks.h
docker/: Dockerfile  compose.yml
tests/: classes.py  ext.py  extensions.py  files.py  filestream.py  regular.py  run_tests.py  stream.py  streaming.py  test.py  test_values.py
