[build-system]
requires = [
  "meson-python>=0.13",
  "meson>=1.2.0",
]
build-backend = "mesonpy"

[project]
name = "cmsgpack"
version = "0.1.2"
description = "Fast MessagePack serializer for Python"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Sven Boertjens", email = "boertjens.sven@gmail.com" }
]
urls = { "Homepage" = "https://github.com/svenboertjens/cmsgpack" }
dependencies = []
